--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 					<h5>Languages and Tools</h5>
 					<div class="pra">
 						<ul>
-							<li style="font-size: 30px;color: aliceblue; padding: 5px 2px 15px 2px;">C, C++, JAVA</li>
+							<li style="font-size: 30px;color: aliceblue; padding: 5px 2px 15px 2px;">C, C++, JAVA, SQL
+							</li>
 							<li style="font-size: 30px;color: aliceblue; padding: 5px 2px 15px 2px;">HTML, CSS</li>
 							<li style="font-size: 30px;color: aliceblue; padding: 5px 2px 10px 2px;">Git</li>
 							<li style="font-size: 30px;color: aliceblue; padding: 5px 2px 15px 2px;">VSCode, Sublime
