--- a/index.html
+++ b/index.html
@@ -150,40 +150,40 @@
 						<ul>
 							<a href="https://codeforces.com/profile/Ahnaf_" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									Codeforces
 								</li>
 							</a>
 
 							<a href="https://www.codechef.com/users/ahnaf_2000" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									Codechef
 								</li>
 							</a>
 
 							<a href="https://atcoder.jp/users/Ahnaf_" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									AtCoder
 								</li>
 							</a>
 							<a href="https://uhunt.onlinejudge.org/id/1048722" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									UVA
 								</li>
 							</a>
 
 							<a href="https://lightoj.com/user/ahnaf_" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									LightOJ
 								</li>
 							</a>
 							<a href="https://cses.fi/user/38264" target="_blank">
 								<li
-									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: left;">
+									style="font-size: 22px;color: aliceblue; padding: 5px 2px 10px 2px;text-align: center;">
 									CSES
 								</li>
 							</a>
