--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Portfolio website</title>
+		<title>Md. Ahnaf Muttaqi Chowdhury</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		<link rel="preconnect" href="https://fonts.gstatic.com">
